# rosetta

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml
CSharp/: Rosetta.sln
Go/: go.mod  go.sum
Go/cmd/api/: main.go
Python/: README.md  config.ini  pyproject.toml
Python/src/python/: main.py
Python/src/python/api/: healtcheck.py
Python/src/python/core/: config.py
Python/src/python/db/: filters.py  forum.py  post.py  postvote.py  session.py  thread.py  threadvote.py  user.py
Python/tests/: conftest.py  test_forummodel.py  test_postmodel.py  test_threadmodel.py  test_usermodel.py
http/: forum.http  http-client.env.json  post.http  thread.http  users.http
migrations/: 000001_create_forum_schema.down.sql  000001_create_forum_schema.up.sql  000002_create_forum_table.down.sql  000002_create_forum_table.up.sql  000003_create_users_table.down.sql  000003_create_users_table.up.sql  000004_create_threads_table.down.sql  000004_create_threads_table.up.sql  000005_create_posts_table.down.sql  000005_create_posts_table.up.sql  000006_add_forum_owner_column.down.sql  000006_add_forum_owner_column.up.sql  000007_add_forum_owner_constraint.down.sql  000007_add_forum_owner_constraint.up.sql  000008_add_deleted_columns.down.sql  000008_add_deleted_columns.up.sql  000009_genereate_default_thread_id.down.sql  000009_genereate_default_thread_id.up.sql  000010_create_vote_tables.down.sql  000010_create_vote_tables.up.sql  000011_create_update_post_likes_function.down.sql  000011_create_update_post_likes_function.up.sql  000012_create_vote_triggers.down.sql  (+25 more)
(+62 files in other folders)
