[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "r3d5un",email = "r3d5un@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "structlog (>=25.2.0,<26.0.0)",
]

[tool.poetry]
packages = [{include = "python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
